# safetyzone_automation

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  표준노드링크_보호구역_자동화_Codex_인수인계_20260706.docx
config/: sgg_codes.example.txt  sgg_codes.seoul.txt  sgg_codes_nationwide.txt  sgg_codes_resume_from_28125.txt
dashboard/: CNAME  app.js  config.example.js  index.html  styles.css
docs/: automation_room_handoff.md  change_event_verification.md  daily_automation.md  database_table_guide.md  document_hub.md  e2e_test_20260706.md  facility_point_group_model.md  m0_inventory_report.md  mvp_project_status.md  nationwide_baseline_rollout_policy_20260723.md  nationwide_rollout.md  ngii_road_centerline_postgis.md  project_scope_nationwide_dashboard_20260723.md  qgis_style_guide_for_link_matching.md  seoul_rollout_validation_20260707.md  standard_link_matching_design.md  standard_link_matching_live_review_20260710.md  standard_link_matching_round1_review.md  standard_link_matching_round2_casebook.md  standard_link_matching_v23_review_policy.md  standard_node_link_db_contract.md  telegram_notification_setup.md  windows_scheduler_github_dispatch.md
qgis_styles/: zone_link_candidate_review_v23_by_bucket.qml  zone_link_candidate_v2_by_match_rule.qml  zone_link_candidate_v2_by_structure.qml  zone_link_coverage_review_v23_by_bucket.qml  zone_link_coverage_v2_by_status.qml  zone_link_excluded_review_v23_by_bucket.qml  zone_link_excluded_v2_by_exclusion_code.qml
scripts/: dispatch_github_workflow.ps1  import_ngii_road_centerline.ps1
(+53 files in other folders)
