[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-zone-monitor"
version = "0.1.0"
description = "Daily change monitoring for Korean police safety-zone Open API data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2,<4",
  "requests>=2.32,<3",
  "shapely>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
safety-zone-monitor = "safety_zone_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safety_zone_monitor = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
cache_dir = ".test_cache"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
